css/noticiame.css
/*
 * Epic Moments - What people all around the world are saying when you want to hear them.
 * Copyright (C) 2013 Nahuel Barrios <barrios.nahuel@gmail.com>.
 *
 *     This program is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     This program is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 *     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

/*************************** Estilos por default para los elementos HTML ***************************/
div {
    text-align: center;
}

ul {
    text-align: left;
}

body {
    background-color: #439861;
}

section ul li {
    border: solid 1px white;
    padding: 5px 10px;
    margin: 10px 0;
    background-color: rgb(240, 255, 240);
    border-radius: 5px;
    list-style: none;
}

/*************************** Clases propias ***************************/

.nav ul li {
    border: solid 1px;
    border-radius: 5px;
    margin: 1px 0;
    padding: 2px;
    background-color: #414261;
    list-style: none;
}

.nav ul li a {
    color: white;
}

.flickr {
    background: url("../img/1370749307_flickr 02.png") no-repeat right;
}

.twitter {
    background: url("../img/twitter-bird-white-on-blue.png") no-repeat right;
}

.rss {
    background: url("../img/1370747843_Location News.png") no-repeat right;
}

.facebook {
    background: url("../img/FB-f-Logo__blue_29.png") no-repeat right;
}

.gplus {
    background: url("../img/g+29.png") no-repeat right;
}

.flickr, .twitter, .rss, .facebook, .gplus {
    background-size: 20px;
}

/*************************** Estilos especificos para sobreescribir los heredados por las dependencias (uso el ID) ***************************/

